--- a/Shapes Mini-Website.html
+++ b/Shapes Mini-Website.html
@@ -23,7 +23,7 @@
     <table id= "boxes" border = "2" align = "center"> 
         <tr><td bgcolor = "#DDDDFF"> <strong> SQUARE </strong>
         </td></tr>
-        <tr> <!-- pirmas langelis :3 -->
+        <tr> <!-- pirmas langelis -->
             <td align = "center">
                 <svg width = "380px" height = "100px">
                     <rect width = "100px" height = "100px" fill = "#4A4457" x = "140" y = "10">
@@ -35,7 +35,7 @@
          </td></tr>
             </td>
         </tr>
-        <tr> <!-- antras langelis :3 -->
+        <tr> <!-- antras langelis -->
         <tr><td bgcolor = "#DDDDFF"> <strong> RECTANGLE </strong>
         </td></tr>
             <td>
@@ -49,7 +49,7 @@
             <strong> AREA = xy <br/>
             PERIMETER = 2x + 2y = x + x + y + y </strong>
         </td></tr>
-        <tr> <!-- zinau as cute :3 -->
+        <tr> <!-- zinau as cute -->
         <tr><td bgcolor = "#DDDDFF"> <strong> CIRCLE </strong>
         </td></tr>
             <td>
@@ -88,7 +88,7 @@
                 </td></tr>
     </table>
     
-    <p> <sub> <strong> <i> Made by Kàfefe. <br/>
+    <p> <sub> <strong> <i> Made by xxxxxx. <br/>
         2017 <br/>
         0.2 ver
     </i> </strong> </sub> </p>
