--- a/Shapes Mini-Website.html
+++ b/Shapes Mini-Website.html
@@ -49,7 +49,7 @@
             <strong> AREA = xy <br/>
             PERIMETER = 2x + 2y = x + x + y + y </strong>
         </td></tr>
-        <tr> <!-- zinau as cute -->
+        <tr> <!-- trecias langelis -->
         <tr><td bgcolor = "#DDDDFF"> <strong> CIRCLE </strong>
         </td></tr>
             <td>
