Update Marquee Function Implementation (HTML).html

--- a/Marquee Function Implementation (HTML).html
+++ b/Marquee Function Implementation (HTML).html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <!-- marquee realizacija -->
 <html>
 	<head>
-		<title>Fancy text. Made by xxxxxx. ofc me</title>
+		<title>Fancy text</title>
 	</head>
 	<body>
 		<font color="#FF00FF"> 
