Update Simple Moving Ball.html

--- a/Simple Moving Ball.html
+++ b/Simple Moving Ball.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Animation by xxxxxx </title>
+        <title> Animation </title>
     </head>
     <body>
         <svg width = "400px" height = "400px">
