Update Weed pattern (creative usage of Table and SVG elements).html

--- a/Weed pattern (creative usage of Table and SVG elements).html
+++ b/Weed pattern (creative usage of Table and SVG elements).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- made by xxxxxx (me ofc) :o -->
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>weed_class(smoke(weed_class.begin(), weed_class.end()));</title> <!-- cia tik pavadinimas :) -->
